Events service. Filter team name. Firebase authentication basics.

--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
     <script src="js/events/events.module.js"></script>
     <script src="js/events/controllers/events.controller.js"></script>
     <script src="js/events/services/events.service.js"></script>
+    <script src="js/events/filters/teamname.filter.js"></script>
 
   </head>
   <body ng-app="ticketstracker" animation="slide-left-right-ios7">
